peertube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peertube
  labels:
    app: peertube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peertube
  template:
    metadata:
      labels:
        app: peertube
    spec:
      containers:
        - name: peertube
          image: chocobozzz/peertube:v7.2.3-bookworm
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
            - containerPort: 9000
              name: peertube
            - containerPort: 1935
              name: rtmp
          volumeMounts:
            - name: peertube-data
              mountPath: /data
          resources:
            requests:
              cpu: "0.5"
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 2Gi
        - name: redis
          image: redis:8.2.1-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: "0.2"
              memory: 256Mi
            limits:
              cpu: "0.5"
              memory: 1Gi
      volumes:
        - name: peertube-data
          persistentVolumeClaim:
            claimName: peertube-data
